# sphero_rvr_chat

./: .gitignore  README.md  install.sh  pyproject.toml  start-chat.sh  uninstall.sh
src/rvr_chat/: __init__.py  cli.py  config.py  memory.py
src/sphero_rvr_chat/: __init__.py  cli.py  config.py  mcp_client.py  system_prompt.py
